<resources>
    <string name="app_name">winkshopappbar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total">Total:</string>
    <string name="comprar">Comprar</string>
    <string name="carritotitle">Carrito de Compras</string>
    <string name="demodescripciondetalle">Descripción: Camisa de seda, variedad de tallas de poliester y de salmón</string>
    <string name="usuariohint">Usuario</string>
    <string name="contrasenahint">Contraseña</string>
    <string name="registrarselogin">Registrarse</string>
    <string name="ingresarinvitadologin">Ingresar como invitado</string>
    <string name="ingresarlogin">Ingresar</string>
    <string name="title_activity_compra">Map</string>

</resources>
